<resources>
    <string name="app_name">Home Page</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
